--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 :root {
   --color-bg: #215db8;
   --color-bg-variant: #033a1e;
-  --color-primary: #4db5ff;
+  --color-primary: #97c580bd;
   --color-primary-variant: rgba(106, 196, 235, 0.523);
   --color-white: #fff;
   -color-light: rgba(255, 255, 255, 0.6);
