--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 
 :root {
   --color-bg: #1d53a5;
-  --color-bg-variant: #033a1e;
+  --color-bg-variant: #587397;
   --color-primary: rgba(192,228,211,255);
   --color-primary-variant: rgba(106, 196, 235, 0.523);
   --color-white: #fff;
