--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ h1 {
 
 section {
   margin-top: 8rem;
-  height: 100vh;
+
 }
 
 section > h2, 
@@ -126,7 +126,7 @@ img {
     width: var(--container-width-md);
   }
   
-  .section {
+  section {
     margin-top: 6rem;
   }
 }
@@ -140,7 +140,7 @@ img {
     width: var(--container-width-sm);
   }
   
-  .section > h2 {
+  section > h2 {
     margin-bottom: 2rem;
   }
 }
