--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ body {
   background: var(--color-bg);
   color: var(--color-white);
   line-height: 1.7;
-  /* background-image: url(../src/assets) */
+  background-image: url(../src/assets/moroccan-flower-dark.png);
 }
 
 /* ================== GENERAL STYLES ================= */
